demo/deployment-pre-built.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wasm-oidc-plugin
  namespace: wasm-oidc-plugin
  labels:
    app: wasm-oidc-plugin

spec:
  selector:
    matchLabels:
      app: wasm-oidc-plugin

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: wasm-oidc-plugin

    spec:
      containers:
        - name: envoy
          image: ghcr.io/antonengelhardt/wasm-oidc-plugin:latest

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml

          startupProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 10000
              name: http
              protocol: TCP

          command:
            ["envoy", "-c", "/etc/envoy/envoy.yaml", "--concurrency", "5"]

      volumes:
        - name: envoy-config
          configMap:
            name: wasm-oidc-plugin-config
            defaultMode: 420
            items:
              - key: envoy.yaml
                path: envoy.yaml

      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: wasm-oidc-plugin

spec:
  selector:
    matchLabels:
      app: httpbin

  template:
    metadata:
      labels:
        app: httpbin

    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "200Mi"
          ports:
            - containerPort: 80
