demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasm-oidc-plugin-ingress
  namespace: wasm-oidc-plugin
spec:
  ingressClassName: nginx
  rules:
    - host: wasm-oidc-plugin.ae02.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wasm-oidc-plugin-service
                port:
                  number: 443
  tls:
    - hosts:
        - wasm-oidc-plugin.ae02.de
      secretName: wasm-oidc-plugin-tls
